# NIDAQ

./: CMakeLists.txt
src/: main.c
